Fixed spacing of calculate button on bmi tool on mobile, closes #725

--- a/app/assets/stylesheets/tools/bmi_ahi.scss
+++ b/app/assets/stylesheets/tools/bmi_ahi.scss
@@ -120,3 +120,9 @@
     border-top: 1px solid #1765bc;
   }
 }
+
+@media (max-width:768px) {
+  #calculate-min-weight {
+    margin-top: 10px;
+  }
+}
